--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "posttest": "kill `cat hem.pid`; rm hem.pid"
   },
   "dependencies": {
+    "hem": "git://github.com/maccman/hem.git#517c97a3ce7",
+    "es5-shimify": "~0.0.1",
+    "json2ify": "~0.0.1",
     "jqueryify": "~0.0.1",
     "underscore": "*",
-    "hem": "git://github.com/maccman/hem.git#517c97a3ce7"
+    "spine": "~1.0.7"
   },
   "devDependencies": {
     
