--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main" : "./index.js",
   "scripts": {
     "pretest": "./node_modules/hem/bin/hem server --port 9289 & echo $! > ./hem.pid",
-    "test": "phantomjs test/lib/run-jasmine.js http://localhost:9289",
+    "test": "sleep 2; phantomjs test/lib/run-jasmine.js http://localhost:9289",
     "posttest": "kill `cat hem.pid`; rm hem.pid"
   },
   "dependencies": {
