--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test": "sleep 2; jasmine-phantom-node --timeout 10000 --url / --port 9289",
     "posttest": "kill `cat hem.pid`; rm hem.pid"
   },
+  "bin" : {
+    "compile-eco": "./bin/compile-eco"
+  },
   "dependencies": {
+    "eco": "1.1.0-rc-3",
     "hem": "git://github.com/maccman/hem.git#517c97a3ce7",
     "es5-shimify": "~0.0.1",
     "json2ify": "~0.0.1",
