--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "mocha": "~1.8.1",
     "mocha-phantomjs": "~1.1.3",
     "nib": "~0.9.1",
+    "sinon": "~1.5.2",
+    "sinon-chai": "~2.3.1",
     "stylus": "~0.32.0"
-  },
-  "dependencies": {
-    "sinon": "~1.5.2"
   }
 }
