--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "stylus": "~0.32.0"
   },
   "scripts": {
-    "pretest": "serveup --port 7357 & echo $! > ./.serveup.pid",
+    "pretest": "serveup --port 7357 & echo $! > ./serveup.pid",
     "test": "mocha-phantomjs http://localhost:7357/test/runner.html",
-    "posttest": "kill `cat .serveup.pid` ; rm .serveup.pid"
+    "posttest": "kill `cat ./serveup.pid` ; rm ./serveup.pid"
   }
 }
