--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "chai": "~1.4.2",
     "chai-jquery": "~1.1.1",
     "coffee-script": "~1.4.0",
+    "eco": "~1.1.0-rc-3",
     "mocha": "~1.8.1",
     "mocha-phantomjs": "~1.1.3",
     "nib": "~0.9.1",
     "serveup": "~0.0.5",
     "sinon": "~1.5.2",
     "sinon-chai": "~2.3.1",
-    "stylus": "~0.32.0"
+    "stylus": "~0.32.0",
+    "wrench": "~1.4.4"
   },
   "scripts": {
     "pretest": "serveup --port 7357 & echo $! > ./serveup.pid",
