--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "eco": "1.1.0-rc-3",
-    "hem": "git://github.com/maccman/hem.git#517c97a3ce7",
+    "hem": "git://github.com/spine/hem.git#517c97a3ce7",
     "es5-shimify": "~0.0.1",
     "json2ify": "~0.0.1",
     "jqueryify": "~0.0.1",
