--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zooniverse",
+  "name": "zooniverse",
   "private": true,
   "description": "Zooniverse front end library",
   "version": "0.0.1",
