--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "wrench": "~1.4.4"
   },
   "scripts": {
+    "start": "cake serve",
     "pretest": "serveup --port 7357 & echo $! > ./serveup.pid",
     "test": "mocha-phantomjs http://localhost:7357/test/runner.html",
     "posttest": "kill `cat ./serveup.pid` ; rm ./serveup.pid"
