--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sinon": "~1.5.2",
     "sinon-chai": "~2.3.1",
     "stylus": "~0.32.0",
+    "uglify-js": "^2.4.13",
     "wrench": "~1.4.4"
   },
   "scripts": {
