--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zooniverse",
   "version": "0.8.0",
-  "devDependencies": {
+  "dependencies": {
     "chai": "~1.9.1",
     "chai-jquery": "~1.2.1",
     "coffee-script": "~1.6.3",
